--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,9 +1,10 @@
 server {
 
+	error_log /home/box/test.error.log;
 	listen       80  default_server;
 
 	location ^~ / {
-		root /home/box/web/public/html;
+		root /home/box/web/public;
 	}
 
 	location ^~ /uploads/ {
