--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,8 +3,12 @@ server {
 	error_log /home/box/test.error.log;
 	listen       80  default_server;
 
-	location ^~ / {
-		root /home/box/web/public;
+	location / {
+		proxy_pass http://0.0.0.0:8080;
+	}
+
+	location /hello/ {
+		proxy_pass http://0.0.0.0:8080;
 	}
 
 	location ^~ /uploads/ {
