--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,20 +3,24 @@ server {
 	error_log /home/box/test.error.log;
 	listen       80  default_server;
 
-	location / {
-		proxy_pass http://0.0.0.0:8080;
+    location / {
+		proxy_pass http://0.0.0.0:8000;
 	}
 
-	location /hello/ {
-		proxy_pass http://0.0.0.0:8080;
-	}
+	# location / {
+	# 	proxy_pass http://0.0.0.0:8080;
+	# }
 
-	location ^~ /uploads/ {
-		root /home/box/web;
-	}
+	# location /hello/ {
+	# 	proxy_pass http://0.0.0.0:8080;
+	# }
 
-	location ~* \.[a-zA-Z]+$ {
-		root /home/box/web/public;
-	}
+	# location ^~ /uploads/ {
+	# 	root /home/box/web;
+	# }
+
+	# location ~* \.[a-zA-Z]+$ {
+	# 	root /home/box/web/public;
+	# }
 
 }
